--- a/src/mongo/SConscript
+++ b/src/mongo/SConscript
@@ -873,11 +873,14 @@ if darwin or env["_HAVEPCAP"]:
 
 # --- shell ---
 
+env.Command(['shell/error_codes.js'], ['shell/generate_error_codes.py', 'base/error_codes.err'],
+            '$PYTHON $SOURCES $TARGETS')
+
 # if you add a file here, you need to add it in scripting/engine.cpp and shell/createCPPfromJavaScriptFiles.js as well
 env.JSHeader("shell/mongo.cpp",
              ["shell/assert.js", "shell/types.js", "shell/utils.js", "shell/utils_sh.js",
               "shell/db.js", "shell/mongo.js", "shell/mr.js", "shell/query.js",
-              "shell/collection.js"])
+              "shell/collection.js", "shell/error_codes.js"])
 
 # if you add a file here, you need to add it in shell/shell_utils.cpp and shell/createCPPfromJavaScriptFiles.js as well
 env.JSHeader("shell/mongo-server.cpp",
